<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.t3intern.anli0001.androidpaydemo.CheckOutActivity"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="137dp"
            android:layout_height="148dp"
            android:id="@+id/imageView"
            android:src="@drawable/headset"
            android:contentDescription="ProductPicture" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product"
                android:id="@+id/textView4"
                android:textSize="40sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:id="@+id/textView3"
                android:textSize="30sp" />
        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/dynamic_wallet_masked_wallet_fragment"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"></FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/android_pay_offer"
        android:id="@+id/android_pay_offer"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Other Method 1"
        android:id="@+id/button2"
        android:layout_gravity="center_horizontal"
        android:onClick="otherPaymentMethod"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/return_to_shop"
        android:id="@+id/return_to_cart"
        android:onClick="returnToCart"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />

</LinearLayout>
